[package]
name = "burne"
version = "0.0.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "BUlk ReName by Editor"
repository = "https://gitlab.com/lo48576/burne"
keywords = []
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1.0.41"
clap = { version = "3.0.0-beta.2", features = ["derive"] }
env_logger = "0.8.4"
log = "0.4.14"
percent-encoding = "2.1.0"
tempfile = "3.2.0"

[badges]
maintenance = { status = "experimental" }
gitlab = { repository = "lo48576/burne", branch = "master" }
